# rightos-sdk

./: .gitignore  LICENSE  PUBLISH.md  README.md
.github/workflows/: ci.yml  mcp-registry-publish.yml  publish-health.yml  python-publish.yml  rightflow-mcp-publish.yml  rightflow-publish.yml  sdk-publish.yml
mcp/: README.md  package-lock.json  package.json  server.json  test-stdio.mjs  tsconfig.json
mcp/src/: index.ts
python/: README.md  pyproject.toml  test_live.py
python/rightos/: __init__.py
rightflow/: README.md  package-lock.json  package.json  tsconfig.json
rightflow-mcp/: README.md  package-lock.json  package.json  server.json  test-stdio.mjs
rightflow-mcp/src/: index.ts
rightflow/src/: index.ts
scripts/: oidc-npm-publish.sh  setup-trusted-publishing.sh
typescript/: README.md  package-lock.json  package.json  test-live.mjs  tsconfig.json
typescript/src/: index.ts
